# lg_renderer

./: Cargo.toml  LICENSE
src/: lib.rs
src/new_renderer/: mod.rs
src/new_renderer/opengl/: mod.rs
src/opengl/: gl_buffer.rs  gl_init.rs  gl_program.rs  gl_renderer.rs  gl_shader.rs  gl_storage.rs  gl_texture.rs  gl_vertex_array.rs  macros.rs  mod.rs
src/renderer/: lg_buffer.rs  lg_shader.rs  lg_texture.rs  lg_uniform.rs  lg_vertex.rs  mod.rs
src/renderer_core/: lg_shader.rs  lg_texture.rs  lg_uniform.rs  lg_vertex.rs  mod.rs
