[package]
name = "lg_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { git = "https://github.com/Cunha-Renato/glium" }

glutin = { version = "0.31.0", default-features = false }
glutin-winit = "0.4.2"
gl = "0.14.0"
raw-window-handle = "0.5.2"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05"] }
shaderc = "0.8.3"

sllog = { path = "../../sllog" }
nalgebra-glm = "0.18.0"